--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_product
+name: flutter_travel
 description: "A new Flutter project."
 
 publish_to: 'none' 
@@ -24,3 +24,4 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
